gcc-14.2.0/gcc/testsuite/gdc.test/runnable/imports/ufcs5c.d
version https://git-lfs.github.com/spec/v1
oid sha256:ec97ad7eb740132694473d815fb28577d6e23b68bd0f13fca7c83536429db400
size 745
